# openfeature-python

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
configcat_openfeature_provider/: __init__.py  provider.py
tests/: test_provider.py
tests/data/: test_json_complex.json
